Fix line break in expand/collapse buttons in KM Editor

--- a/engine-wizard/scss/modules/_KMEditor.scss
+++ b/engine-wizard/scss/modules/_KMEditor.scss
@@ -47,6 +47,7 @@
         a {
             font-size: 80%;
             padding: 0.25rem 0.3rem;
+            white-space: nowrap;
 
             .fa {
                 margin-right: 0.25rem;
